--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,27 @@
 {
-  "name": "ProteinPath",
-  "short_name": "ProteinPath",
+  "name": "Protein Path - Nutrition Tracker",
+  "short_name": "Protein Path",
+  "description": "AI-powered nutrition tracker for tracking your daily macros and calories",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0f172a",
-  "theme_color": "#0f172a",
+  "orientation": "portrait",
+  "background_color": "#f8fafc",
+  "theme_color": "#f43f5e",
+  "scope": "/",
   "icons": [
     {
       "src": "https://picsum.photos/192/192",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "https://picsum.photos/512/512",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "categories": ["health", "lifestyle"],
+  "screenshots": []
 }
